# build_api_client_jamf

./: .gitignore  build_jamf_api_client 2.py  build_jamf_api_client.py  pyproject.toml
build_jamf_api_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
build_jamf_core/: clean_up_test_site.py  create_class.py  create_class_attributes.py  create_methods_for_class.py  create_methods_for_get_class.py  create_project_structure.py  create_test_classes.py  dev_create_class.py  get_url_extensions.py  human_assited_corrections.py
core/: config.py
core/tests/get_jamf/: test_accounts.py  test_activationcode.py  test_advancedcomputersearches.py  test_advancedmobiledevicesearches.py  test_advancedusersearches.py  test_allowedfileextensions.py  test_buildings.py  test_byoprofiles.py  test_categories.py  test_classes.py  test_commandflush.py  test_computerapplicationsapplication.py  test_computerapplicationsapplication{application}.py  test_computerapplicationusageid.py  test_computerapplicationusageid{id}{start_date}_{end_date}.py  test_computercheckin.py  test_computercommands.py  test_computerconfigurations.py  test_computerextensionattributes.py  test_computergroups.py  test_computerhardwaresoftwarereportsid.py  test_computerhardwaresoftwarereportsid{id}{start_date}_{end_date}.py  test_computerhistoryid.py  test_computerhistoryid{id}.py  test_computerinventorycollection.py  test_computerinvitations.py  test_computermanagementid.py  test_computermanagementid{id}.py  test_computerreports.py  test_computers.py  test_departments.py  test_directorybindings.py  (+60 more)
