[tool.poetry]
name = "build_jamf_api_client"
version = "0.1.0"
description = ""
authors = ["tank <jeremydrodrigues@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
selenium = "^3.141"
bs4 = "^0.0.1"
requests = "^2.22"
lxml = "^4.4"


[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
